--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "ragingwind.me"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "iojs": ">=2.0.0"
   },
   "scripts": {
     "start": "electron .",
@@ -35,7 +35,7 @@
     "electron-prebuilt": "^0.30.4"
   },
   "dependencies": {
-    "bleno": "^0.2.0",
+    "eddystone-beacon": "^1.0.1",
     "electron-debug": "^0.1.1",
     "node-jsx": "^0.13.3",
     "react": "^0.13.3"
