--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "electron .",
     "clean": "rm -rf build; mkdir -p build",
-    "build": "electron-packager . $npm_package_productName --prune --asar --ignore=node_modules/electron-prebuilt --ignore=node_modules/electron-packager --ignore=.git"
+    "build": "electron-packager . $npm_package_productName --out=./build --platform=darwin --arch=all --prune --asar --ignore=node_modules/electron-prebuilt --ignore=node_modules/electron-packager --ignore=.git  --version=0.30.4"
   },
   "files": [
     "index.js",
